# csm-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
cfr_semantic_files/: serde_field_access.cocci  serde_field_access_2.cocci  serde_field_access_3.cocci  socks5_unwrap.cocci  to_string.cocci  to_string_2.cocci  to_string_3.cocci
docs/superpowers/plans/: 2026-06-13-progenitor-bos-codegen.md  2026-06-13-progenitor-bos-output-reference.md  2026-06-13-progenitor-bss-codegen.md  2026-06-13-progenitor-bss-output-reference.md  2026-06-13-progenitor-cfs-codegen.md  2026-06-13-progenitor-cfs-output-reference.md  2026-06-13-progenitor-hsm-codegen.md  2026-06-13-progenitor-output-reference.md  2026-06-13-progenitor-pcs-codegen.md  2026-06-13-progenitor-pcs-output-reference.md  2026-06-15-sat-file-validate-endpoint.md
docs/superpowers/specs/: 2026-06-13-progenitor-hsm-codegen-design.md  2026-06-15-sat-file-validate-endpoint-design.md
examples/: list_cfs_sessions.rs  list_hsm_groups.rs  power_cycle_nodes.rs
src/: backend_connector.rs  client.rs  error.rs  lib.rs
src/backend_connector/: authentication.rs  bos.rs  bss.rs  cfs.rs  cleanup.rs  console.rs  group.rs  hsm.rs  ims.rs  migrate.rs  mod.rs  pcs.rs  sat.rs
src/bos/: csm_api_docs.yaml  generated.rs  health_check.rs  mod.rs  tests.rs
src/bos/session/: mod.rs
src/bos/session/http_client/: mod.rs
src/bos/session/http_client/v1/: mod.rs
src/bos/session/http_client/v2/: dispatcher_conv.rs  mod.rs  types.rs
src/bos/template/: mod.rs  utils.rs
src/bos/template/http_client/: mod.rs
src/bos/template/http_client/v1/: mod.rs  types.rs
src/bos/template/http_client/v2/: dispatcher_conv.rs  mod.rs  types.rs
src/bos/wrapper/: health_check.rs  mod.rs
src/bos/wrapper/v1/: mod.rs  session.rs  template.rs
src/bos/wrapper/v2/: mod.rs  session.rs  template.rs
src/bss/: csm_api_docs.openapi3.json  dispatcher_conv.rs  generated.rs  http_client.rs  mod.rs  tests.rs  types.rs  utils.rs
src/bss/http_client/: mod.rs
src/bss/wrapper/: mod.rs
src/capmc/: csm_api_docs.yaml  http_client.rs  mod.rs  types.rs  utils.rs
src/capmc/http_client/: mod.rs
src/cfs/: cleanup.rs  cleanup_session.rs  common.rs  configuration.rs  csm_api_docs.yaml  generated.rs  health.rs  mod.rs  tests.rs
src/cfs/component/: mod.rs  utils.rs
src/cfs/component/http_client/: mod.rs
src/cfs/component/http_client/v2/: dispatcher_conv.rs  mod.rs  types.rs
src/cfs/component/http_client/v3/: dispatcher_conv.rs  mod.rs  types.rs
src/cfs/configuration/: error.rs  mod.rs  utils.rs
src/cfs/configuration/csm_rs/: http_client.rs  utils.rs
src/cfs/configuration/http_client/: mod.rs
src/cfs/configuration/http_client/v2/: mod.rs
src/cfs/configuration/http_client/v3/: mod.rs
src/cfs/configuration/shasta/: http_client.rs
src/cfs/session/: mod.rs  utils.rs
src/cfs/session/http_client/: mod.rs
src/cfs/session/http_client/v2/: dispatcher_conv.rs  mod.rs  types.rs
src/cfs/session/http_client/v3/: dispatcher_conv.rs  mod.rs  types.rs
src/cfs/wrapper/: mod.rs
src/cfs/wrapper/v2/: component.rs  configuration.rs  mod.rs  session.rs
src/cfs/wrapper/v3/: component.rs  configuration.rs  mod.rs  session.rs
src/commands/: apply_session.rs  delete_configurations_and_data_related.rs  get_images_and_details.rs  i_delete_data_related_to_cfs_configuration.rs  i_migrate_restore.rs  migrate_backup.rs  migrate_restore.rs  mod.rs
src/commands/apply_hw_cluster_pin/: command.rs  mod.rs  tests.rs  utils.rs
src/commands/apply_sat_file/: command.rs  tests.rs  utils.rs
src/commands/delete_and_cancel_session/: command.rs  mod.rs  tests.rs
src/commands/i_apply_sat_file/: command.rs  mod.rs  tests.rs  utils.rs
src/commands/i_apply_sat_file/utils/: configuration.rs  configurations.rs  hpe_products.rs  image.rs  images.rs  mod.rs  sat_file_image_old.rs  session_templates.rs  sessiontemplate.rs
src/common/: authentication.rs  cluster_ops.rs  csm.rs  gitea.rs  http.rs  jwt_ops.rs  kubernetes.rs  mod.rs  poll.rs  vault.rs  yaml.rs
src/hsm/: csm_api_docs.openapi3.json  csm_api_docs.yaml  dispatcher_conv.rs  generated.rs  mod.rs  types.rs
src/hsm/component/: dispatcher_conv.rs  http_client.rs  mod.rs  types.rs
src/hsm/component_status/: mod.rs
src/hsm/component_status/http_client/: mod.rs
src/hsm/group/: dispatcher_conv.rs  ext.rs  hacks.rs  http_client.rs  mod.rs  tests.rs  types.rs  utils.rs
src/hsm/hw_inventory/: mod.rs
src/hsm/hw_inventory/ethernet_interfaces/: http_client.rs  mod.rs  types.rs
src/hsm/hw_inventory/hw_component/: dispatcher_conv.rs  http_client.rs  mod.rs  types.rs  utils.rs
src/hsm/hw_inventory/redfish_endpoint/: dispatcher_conv.rs  http_client.rs  mod.rs  types.rs
src/hsm/memberships/: http_client.rs  mod.rs  types.rs
src/hsm/service/: mod.rs
src/hsm/service/values/: mod.rs
src/hsm/service/values/role/: hardcoded_values.rs  http_client.rs  (+2 more)
src/hsm/wrapper/: component.rs  component_status.rs  ethernet_interfaces.rs  group.rs  hw_component.rs  hw_component_types.rs  memberships.rs  mod.rs  redfish_endpoint.rs  service_values.rs
src/ims/: mod.rs  public_keys.rs  s3_client.rs
src/ims/image/: mod.rs  utils.rs
src/ims/image/http_client/: dispatcher_conv.rs  mod.rs  types.rs
src/ims/job/: http_client.rs  mod.rs  types.rs  utils.rs
src/ims/recipe/: http_client.rs  mod.rs  types.rs
src/node/: console.rs  mod.rs  types.rs  utils.rs
src/pcs/: csm_api_docs.yaml  generated.rs  mod.rs
src/pcs/power_cap/: http_client.rs  mod.rs  types.rs
src/pcs/power_status/: dispatcher_conv.rs  http_client.rs  mod.rs  types.rs
src/pcs/transitions/: dispatcher_conv.rs  http_client.rs  mod.rs  types.rs
src/pcs/transitions/http_client/: mod.rs
src/pcs/wrapper/: mod.rs  power_cap.rs  power_status.rs  transitions.rs
tests/: backend_connector.rs  commands_delete_and_cancel_session.rs  shasta_client_bos.rs  shasta_client_cfs.rs  shasta_client_hsm.rs  shasta_client_ims.rs  shasta_client_misc.rs  shasta_client_pcs.rs
tests/common/: mod.rs
(+10 files in other folders)
