[package]
edition = "2024"
rust-version = "1.85"
authors = ["Manuel Sopena Ballesteros <msopena@cscs.ch>"]
name = "csm-rs"
description = "Async Rust client for the HPE Cray Shasta CSM (Cray System Management) API."
version = "1.0.0-beta.6"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/csm-rs"
homepage = "https://github.com/eth-cscs/csm-rs"
repository = "https://github.com/eth-cscs/csm-rs"
keywords = ["hpc", "shasta", "csm", "cray", "hpe"]
categories = ["api-bindings", "asynchronous"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["manta-dispatcher"]
# Enables the `backend_connector` adapter, the `From<csm_rs::Error> for
# manta_backend_dispatcher::Error` impl, and the PCS/HSM type
# conversions to/from the dispatcher. Users who only want csm-rs as a
# direct CSM client (not behind Manta) can disable this with
# `default-features = false` to skip pulling the dispatcher dep and its
# transitive deps.
manta-dispatcher = ["dep:manta-backend-dispatcher"]

[dependencies]
manta-backend-dispatcher = { version = "1.0.0-beta.6", optional = true }

# manta-backend-dispatcher = { path = "../manta-backend-dispatcher", optional = true } # Only for development purposes
# manta-backend-dispatcher = { git = "https://github.com/eth-cscs/manta-backend-dispatcher", branch="feature/power-status" } # Only for development purposes

strum = { version = "0.27.1", default-features = false }
strum_macros = "0.27.1"
chrono = { version = "0.4.41", default-features = false }
anyhow = { version = "1.0.44", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
log = "0.4.27"
log4rs = { version = "1.2.0" }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-util = "0.7.4" # used by manta_console to create a read stream from container stdout
tokio-stream = { version = "0.1.11", default-features = false }
kube = { version = "2.0.1", features = ["ws", "socks5", "runtime"] }
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
md5 = { version = "0.7.0", default-features = false }
uuid = { version = "1.16.0", features = ["fast-rng", "v4"] }
# git2 = { version = "0.18.1", default-features = false, features = ["vendored-openssl"] }
indicatif = { version = "0.18", default-features = false }
# Needed by `ims::s3_client::setup_client`: the AWS SDK (aws-sdk-s3,
# aws-sdk-sts) still uses hyper 0.14 transitively via aws-smithy-http-client,
# and we glue SOCKS5 into the S3 transport using hyper_socks2::SocksConnector
# + hyper::client::HttpConnector + the AWS SDK's hyper_014::HyperClientBuilder.
# Drop these when aws-smithy-http-client upgrades to hyper 1.x (it will then
# also satisfy hyper-rustls 0.27+). kube-rs is unrelated -- kube 2.0.1 is
# already on hyper 1.x.
hyper-socks2 = { version = "0.8.0", default-features = false }
hyper = { version = "0.14" }
hyper-util = "0.1.16"
tower = { version = "0.4.13", default-features = false }
futures = { version = "0.3.31", default-features = false }
futures-channel = "0.3.31"
regex = "1.6.0"
secrecy = { version = "0.10.0", default-features = false }
termion = "2.0.1" # used by manta_console to enable terminal raw
base64 = { version = "0.22", default-features = false, features = ["std"] }
aws-sdk-s3 = { version = "1.12.0", features = ["rustls"], default-features = false }
aws-config = { version = "1.1.2", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1.0.1" }
aws-smithy-types = { version = "1.1.2", features = ["rt-tokio"] }
globset = { version = "0.4.14", default-features = false }
humansize = "2.0.0"
substring = "1.4.5"
thiserror = "1.0.56"
hostlist-parser = "0.1.6"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.
#incremental = true
debug = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
